fixed wrap-round position mob

--- a/src/scss/base/_admin-style.scss
+++ b/src/scss/base/_admin-style.scss
@@ -497,7 +497,13 @@ html {
   line-height: 28px;
   margin-bottom: 4px;
 }
-
+.gdlr-core-icon-list-item.list-img-v.v-2 .gdlr-core-icon-list-content{
+  margin-bottom: 8px;
+}
+.gdlr-core-icon-list-item .gdlr-core-icon-list-image {
+  margin-right: 16px;
+  margin-top: 0;
+}
 @media screen and (max-width: 991px) {
   .full-bg.full-bg-2 .full-bg__content .gdlr-core-pbf-background-wrap {
     width: 50vw;
@@ -528,4 +534,8 @@ html {
 
 .gdlr-core-pbf-section:first-child {
   padding-top: 32px;
+}
+
+.gdlr-core-pbf-column-content-margin.gdlr-core-js.img-w50 {
+  padding-top: 54%;
 }
