--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -245,6 +245,17 @@ body {
   counter-increment: list;
   content: counters(list, '. ') '.';
 }
+.dynamic-content a{
+  color: #27A737;
+  transition: .35s
+}
+.dynamic-content a:hover,
+.dynamic-content a:focus{
+  color: #52B95F;
+}
+.dynamic-content a:active{
+  color: #64B445;
+}
 
 .dynamic-content ol,
 .dynamic-content ul {
@@ -293,7 +304,9 @@ body {
 .scroll-to-anchor a:hover {
   color: #52B95F;
 }
-
+.scroll-to-anchor a{
+  color: #6A6A6A;
+}
 .wrap-round{
   position: fixed;
   bottom: 30px;
@@ -368,6 +381,36 @@ body {
   box-shadow: none;
 }
 
+.product-img-list-tabs{
+  .block-img-text img{
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    object-fit: cover;
+    z-index: 1;
+    transition: .35s;
+    &:hover{
+      transform: scale(1.1);
+    }
+  }
+  .block-img-text .wrap-img{
+    position: relative;
+    flex-shrink: 0;
+    margin-right: 10px;
+    padding-top: 27%;
+    min-height: 100px;
+    overflow: hidden;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .wrap-round{
+    bottom: 60px;
+  }
+}
 @media only screen and (max-width: 576px) {
   .wrap-round{
     right: 16px;
@@ -384,5 +427,8 @@ body {
   .round__close svg{
     width: 24px;
     height: 24px;
+  }
+  .block-img-text .text-md{
+    line-height: 16px;
   }
 }
