--- a/src/scss/components/_tabs.scss
+++ b/src/scss/components/_tabs.scss
@@ -38,7 +38,9 @@
     padding: 11px 16px;
     letter-spacing: 0.0015em;
     transition: .35s;
-
+    &:empty {
+      display: none!important;
+    }
     &:hover {
       color: $serena-green-40;
       background-color: $creative-green-5;
